--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,5 +1,5 @@
 /* fonts */
-@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&family=Raleway:ital,wght@0,500;1,500&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&family=Raleway:ital,wght@0,500;1,500&display=swap");
 
 .raleway-secondary {
   font-family: "Raleway", serif;
@@ -9,100 +9,296 @@
 }
 
 /* main style */
-body{
-    margin: 0;
-    padding: 0;
-    font-family: "Quicksand", serif;
+body {
+  margin: 0;
+  padding: 0;
+  font-family: "Quicksand", serif;
 }
 
-header{
-    margin-top: 1.25rem;
+header {
+  margin-top: 1.25rem;
 }
-.logo span{
-    font-size: 2rem;
+.logo span {
+  font-size: 2rem;
 }
-.nav-links li{
-    list-style: none;
+.nav-links li {
+  list-style: none;
 }
-.nav-links a{
-    text-decoration: none;
-    font-size: 1.25rem;
+.nav-links a {
+  text-decoration: none;
+  font-size: 1.25rem;
 }
-ul{
-    padding-left: 0;
+ul {
+  padding-left: 0;
 }
-ul.flex{
-    gap: 2rem;
+ul.flex {
+  gap: 2rem;
 }
-.nav-button{
-    background: rgb(254,163,1);
+.nav-button {
+  background: rgb(254, 163, 1);
 }
 /* banner */
-.banner-container{
-    gap: 3rem;
+.banner-container {
+  gap: 3rem;
 }
 
-.banner-description h2{
-    font-size: 3.5rem;
+.banner-description h2 {
+  font-size: 3.5rem;
+  margin: 0;
+}
+.banner-description {
+  font-size: 1.25rem;
+}
+.banner-description button {
+  background: black;
+}
+/* curriculum section */
+.curriculum-section {
+  background: url(../assets/bg.png);
+}
+
+.curriculum-section {
+  padding-top: 60px;
+}
+
+.curriculum-card-container {
+  margin-top: 5rem;
+  gap: 1.5rem;
+}
+.curriculum-card-heading {
+  font-size: 1.54rem;
+  color: #202020;
+  margin: 0;
+}
+.curriculum-des {
+  color: #808080;
+  margin: 0;
+  text-align: center;
+}
+.curriculum-button {
+  font-weight: 700;
+  background: white;
+  border: none;
+}
+#curriculum-card-1 {
+  background: linear-gradient(
+      180deg,
+      rgb(222, 245, 255),
+      rgba(255, 255, 255, 0) 40%
+    ),
+    rgb(255, 255, 255);
+}
+#curriculum-card-2 {
+  background: linear-gradient(
+      180deg,
+      rgb(255, 244, 220),
+      rgba(255, 255, 255, 0) 40%
+    ),
+    rgb(255, 255, 255);
+}
+#curriculum-card-3 {
+  background: linear-gradient(
+      180deg,
+      rgb(238, 225, 255),
+      rgba(255, 255, 255, 0) 40%
+    ),
+    rgb(255, 255, 255);
+}
+.angle-button-container {
+  font-size: 24px;
+  margin-top: 60px;
+  gap: 10px;
+}
+.angle {
+  background: rgb(254, 163, 1);
+  width: 60px;
+  height: 60px;
+  border-radius: 50%;
+  color: white;
+}
+/* stories section */
+.our-stories-section {
+  padding-top: 5rem;
+}
+/* .our-stories-section.secti */
+
+.our-stories-section {
+  background: url(../assets/bg.png),
+    linear-gradient(0deg, rgba(254, 163, 1, 0.3), rgba(255, 255, 255, 0.3) 100%);
+}
+.stories-card {
+  border-radius: 16px;
+}
+.stories-card img {
+  border-radius: 16px 16px 0px 0px;
+  width: 100%;
+}
+.stories-container{
+  padding-bottom: 40px;
+}
+.stories-content-1{
+  position: relative;
+  padding: 20px 60px 34px 38px;
+}
+.stories-content{
+  position: relative;
+  padding: 30px;
+  padding-bottom: 10px;
+}
+.stories-card-title-1{
+  font-size: 24px;
+  margin-bottom: 0;
+  margin-top: 20px;
+}
+.stories-card-title{
+  font-size: 15px;
+  margin-top: 10px;
+  margin-bottom: 0px;
+}
+.stories-content p {
+  color: #666;
+  line-height: 28px;
+  margin-top: 30px;
+}
+.date {
+  width: 174px;
+  border-radius: 47.93px;
+  background: rgb(60, 216, 232);
+  color: white;
+  text-align: center;
+  padding: 10px;
+  position: absolute;
+  left: 38px;
+  top: -25px;
+}
+.stories-card-container {
+  display: grid;
+  grid-template-columns: repeat(4,1fr);
+  gap: 20px;
+}
+.stories-card-1{
+  grid-column: span 2;
+  grid-row: span 2;
+}
+
+.stories-button button{
+  background: black;
+  margin: 0 auto;
+  margin-top: 70px;
+}
+footer{
+  background: rgb(1, 172, 253);
+  padding: 123px 0;
+  color: white;
+}
+.footer-content{
+  display: grid;
+  grid-template-columns: repeat(3,1fr);
+}
+.footer-logo{
+  gap: 10px;
+}
+.footer-logo img{
+  background: white;
+  padding: 5px;
+}
+.footer-logo-name{
+  font-size: 40px;
+  font-weight: 700;
+  line-height: 39px;
+}
+@media screen and (max-width: 576px) {
+  header {
+    border: 0.5px solid rgb(254, 163, 1);
     margin: 0;
-}
-.banner-description{
-    font-size: 1.25rem;
-}
-.banner-description button{
-    background: black;
+  }
+  nav,
+  .banner-container,
+  .curriculum-card-container,
+  .stories-container {
+    width: 357px;
+    margin: 0 auto;
+  }
+  nav {
+    padding: 12px 0;
+  }
+  .nav-links,
+  .nav-button,
+  nav span {
+    display: none;
+  }
+  .ham-icon i {
+    font-size: 36px;
+    cursor: pointer;
+  }
+  .ham-icon li {
+    list-style: none;
+  }
+  .ham-icon a {
+    text-decoration: none;
+  }
+  .banner-container {
+    flex-direction: column-reverse;
+    gap: 1.25rem;
+  }
+  .banner-container img {
+    width: 100%;
+  }
+  .banner-description {
+    text-align: center;
+  }
+  .banner-description h2 {
+    font-size: 2rem;
+  }
+  .banner-description p {
+    font-size: 1.1rem;
+  }
+  .banner-description button {
+    font-size: 16px;
+    width: 130px;
+  }
+
+  .curriculum-card-container {
+    flex-direction: column;
+    margin-top: 20px;
+  }
+  .curriculum-container h3 {
+    font-size: 1.62rem;
+  }
+  .angle-button-container {
+    display: none !important;
+  }
+  .stories-card-1{
+    display: none;
+  }
+  .stories-card-container{
+    grid-template-columns: repeat(2,1fr);
+  }
+  .date{
+    font-size: 10px;
+    width: 102px;
+    top: -16px;
+    left: 17px;
+    padding: 5px 10px;
+  }
+  .stories-card-title{
+    font-size: 10px;
+    margin-top: 10px;
+  }
+  .stories-content{
+    padding-top: 10px;
+    padding-left: 15px;
+    padding-bottom: 15px;
+  }
+  .stories-button button{
+    font-size: 16px;
+    width: 134px;
+    padding: 5px;
+  }
 }
 
-
-
-@media screen and (max-width:576px){
-    header{
-        border: 0.5px solid rgb(254,163,1);
-        margin: 0;
-    }
-    nav,.banner-container{
-        width: 357px;
-        margin: 0 auto;
-    }
-    nav{
-        padding: 12px 0;    
-    }
-    .nav-links,.nav-button,nav span{
-        display: none;
-    }
-    .ham-icon i{
-        font-size: 36px;
-        cursor: pointer;
-    }
-    .ham-icon li{
-        list-style: none;
-    }
-    .ham-icon a{
-        text-decoration: none;
-    }
-    .banner-container{
-        flex-direction: column-reverse;
-        gap: 1.25rem;
-    }
-    .banner-container img{
-        width: 100%;
-    }
-    .banner-description{
-        text-align: center;
-    }
-    .banner-description h2{
-        font-size: 2rem;
-    }
-    .banner-description p{
-        font-size: 1.10rem;
-    }
-    .banner-description button{
-        font-size: 16px;
-        width: 130px;
-    }
-}
-@media screen and (min-width:576px){
-    .ham-icon{
-        display: none;
-    }
+@media screen and (min-width: 576px) {
+  .ham-icon {
+    display: none;
+  }
 }
