--- a/styles/styles.css
+++ b/styles/styles.css
@@ -194,6 +194,7 @@ footer{
 .footer-content{
   display: grid;
   grid-template-columns: repeat(3,1fr);
+  gap: 150px;
 }
 .footer-logo{
   gap: 10px;
@@ -206,6 +207,26 @@ footer{
   font-size: 40px;
   font-weight: 700;
   line-height: 39px;
+}
+.logo-about{
+  margin-top: 30px;
+}
+.logo-about p{
+  font-size: 20px;
+  margin-top: 30px;
+}
+footer h4{
+  font-size: 24px;
+}
+footer a{
+  text-decoration: none;
+  color: white;
+}
+footer li{
+  list-style: none;
+  margin-bottom: 20px;
+  font-size: 20px;
+  
 }
 @media screen and (max-width: 576px) {
   header {
