--- a/styles/styles.css
+++ b/styles/styles.css
@@ -236,7 +236,8 @@ footer li{
   nav,
   .banner-container,
   .curriculum-card-container,
-  .stories-container {
+  .stories-container,
+  .footer-content {
     width: 357px;
     margin: 0 auto;
   }
@@ -315,6 +316,13 @@ footer li{
     font-size: 16px;
     width: 134px;
     padding: 5px;
+  }
+  .footer-content{
+    grid-template-columns: 1fr;
+    gap: 10px;
+  }
+  .logo-about{
+    margin-top: 0;
   }
 }
 
