--- a/styles/styles.css
+++ b/styles/styles.css
@@ -28,6 +28,9 @@ header {
   text-decoration: none;
   font-size: 1.25rem;
 }
+a:hover{
+  text-decoration: underline;
+}
 ul {
   padding-left: 0;
 }
@@ -115,6 +118,11 @@ ul.flex {
   height: 60px;
   border-radius: 50%;
   color: white;
+  cursor: pointer;
+  transition: all 0.5s;
+}
+.angle:hover{
+  background-color: rgb(201, 127, 0);
 }
 /* stories section */
 .our-stories-section {
@@ -228,8 +236,12 @@ footer li{
   font-size: 20px;
   
 }
+
+
+/* responsive */
 @media screen and (max-width: 576px) {
   header {
+    
     border: 0.5px solid rgb(254, 163, 1);
     margin: 0;
   }
@@ -238,15 +250,16 @@ footer li{
   .curriculum-card-container,
   .stories-container,
   .footer-content {
-    width: 357px;
-    margin: 0 auto;
+    max-width: 357px;
+    padding-left: 16px;
+    padding-right: 16px;
   }
   nav {
-    padding: 12px 0;
+    padding: 12px 16px;
   }
   .nav-links,
   .nav-button,
-  nav span {
+  nav span,marquee {
     display: none;
   }
   .ham-icon i {
@@ -298,19 +311,17 @@ footer li{
   }
   .date{
     font-size: 10px;
-    width: 102px;
+    width: 95px;
     top: -16px;
     left: 17px;
     padding: 5px 10px;
   }
   .stories-card-title{
-    font-size: 10px;
+    font-size: 9px;
     margin-top: 10px;
   }
   .stories-content{
-    padding-top: 10px;
-    padding-left: 15px;
-    padding-bottom: 15px;
+    padding: 10px 5px 15px 15px;
   }
   .stories-button button{
     font-size: 16px;
@@ -326,8 +337,11 @@ footer li{
   }
 }
 
+
+
+
 @media screen and (min-width: 576px) {
-  .ham-icon {
+  .ham-icon, .for-small-device{
     display: none;
   }
 }
